--- a/index.html
+++ b/index.html
@@ -1,63 +1,43 @@
 <html lang="en">
 <head>
-    <meta name="viewport" content="width = device-width, initial-scale = 1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>MarioClub</title>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
 </head>
 <body>
     <header>
-        <h1>MarioClub</h1>
+        <div class="heading">
+            <h1>About Me</h1>
+            <p>This is an About me page regarding Web Dev task-1 of Enigma Induction-2023</p>
+        </div>
     </header>
-
-    <section class="banner">
-        <img src="img/banner.png" alt="welcome banner">
-        <div class="welcome">
-            <h2>Welcome to <br><span>MarioClub</span></h2>
+    
+    <section class="content">
+        <img src="img/1.jpg" class="cover">
+        <div class="message">
+            <h2>Hello Everyone, Have a Nice Day!</h2>
+            <p>
+                My name is Subham Mishra and am from Cuttack. I have completed my matriculation and Intermediate
+                from DAV Public School, CDA, Cuttack. Currently am pursuing my Bachelors degree from Veer Surendra
+                Sai University of Technology, Burla (formerly known as University College of Engineering) in the Department
+                of Electronics & Telecommunication Engg. 
+            </p>
+            <p>You can read more here!</p>
+            <a href="read_more.html"><button class="read_more">Read More</button></a>
+            <div class="links">
+                <ul>
+                    <li><a href="mailto:subhamctc3007@gmail.com"><img src="img/gmail.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/subham-mishra-576b001b2/"><img src="img/linkedin.png"></a></li>
+                    <li><a href="https://instagram.com/subham.__.mishra?igshid=ZDdkNTZiNTM="><img src="img/Instagram.png"></a></li>
+                </ul>
+            </div>
         </div>
     </section>
 
-    <nav class="main-nav">
-        <ul>
-            <li> <a href="join.html" class="join">Join Us</a> </li>
-            <li> <a href="#">News</a> </li>
-            <li> <a href="#">Games</a> </li>
-            <li> <a href="#">Contact</a> </li>
-        </ul>
-    </nav>
-
-    <main>
-        <article>
-            <h2>It's me, Mario</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse reiciendis omnis eveniet amet 
-                officia. Ipsum architecto necessitatibus eum, iusto obcaecati accusantium adipisci numquam. 
-                Recusandae a facilis quod aut. Dolores, beatae! Lorem ipsum, dolor sit amet consectetur 
-                adipisicing elit. Deleniti laudantium facilis assumenda magni iusto nihil voluptatum soluta 
-                tempora. Non nostrum iusto obcaecati veniam possimus nemo quas provident assumenda nisi. 
-                Voluptate!
-            </p>
-        </article>
-
-        <ul class="images">
-            <li> <img src="img/thumb-1.png" alt="thumb 1"> </li>
-            <li> <img src="img/thumb-2.png" alt="thumb 2"> </li>
-        </ul>
-    </main>
-
-    <section class="join">
-        <h2>Join Today!</h2>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Similique architecto fugit minus eaque excepturi accusamus
-        </p>
-        <form>
-            <input type="email" name="email" placeholder="Type Email and hit Enter" required>
-        </form>
-    </section>
-
     <footer>
-        <p>Copyright 2023 MarioClub</p>
+        © Copyright Subham Mishra 2023
     </footer>
-
 </body>
 </html>
