--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <section class="content">
         <img src="img/1.jpg" class="cover">
         <div class="message">
-            <h2>Hello Everyone, Have a Nice Day!</h2>
+            <h2>Hello, My name is Subham Mishra..</h2>
             <p>
-                My name is Subham Mishra and am from Cuttack. I have completed my matriculation and Intermediate
+                and am from Cuttack. I have completed my matriculation and Intermediate
                 from DAV Public School, CDA, Cuttack. Currently am pursuing my Bachelors degree from Veer Surendra
                 Sai University of Technology, Burla (formerly known as University College of Engineering) in the Department
                 of Electronics & Telecommunication Engg. 
