--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="pages gallery">
             <a href="https://subhamctc3007.github.io/Gallery" target="_blank">Gallery</a>
         </div>
+        <div class="pages clock">
+            <a href="https://subhamctc3007.github.io/Clock" target="_blank">Clock</a>
+        </div>
     </nav>
 
     <header>
